components/actualserver/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: actual
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: actualserver
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elactualserver
  namespace: actual
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-actualserver
    weight: null
status: {}
